[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/sprites/uto-logo.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/btn-icon-kofi.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/btn-icon-web.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/btn-icon-redbubble.png" type="Texture" id=4]
[ext_resource path="res://resources/VictoryScreen/VictoryTextFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://objects/ui/Button.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/CTA/CTA.gd" type="Script" id=7]
[ext_resource path="res://scenes/themes/main_theme.theme" type="Theme" id=8]

[node name="CTA" type="Node2D"]
script = ExtResource( 7 )

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 388.557, 284.389 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.976471, 0.968627, 0.972549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="CanvasLayer"]
self_modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.5
margin_top = -136.5
margin_right = 320.5
margin_bottom = 136.5
custom_fonts/font = ExtResource( 5 )
text = "YOU ARE YOU.

DO YOU LIKE THIS PROJECT?
PLEASE SUPPORT US"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 59.0
margin_top = -414.0
margin_right = -60.0
margin_bottom = -54.0
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true
}

[node name="Donate" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 6 )]
visible = false
margin_right = 631.0
margin_bottom = 78.0
theme = ExtResource( 8 )
text = "DONATE"
decorationTexture = ExtResource( 2 )
customMargin = true
customLeftMargin = 14

[node name="UtoShop" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 6 )]
margin_right = 631.0
margin_bottom = 78.0
theme = ExtResource( 8 )
text = "UTO SHOP"
decorationTexture = ExtResource( 4 )

[node name="Website" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 94.0
margin_right = 631.0
margin_bottom = 172.0
theme = ExtResource( 8 )
text = "YOUAREUTO.COM"
decorationTexture = ExtResource( 3 )

[node name="ChallengeSelection" parent="CanvasLayer/VBoxContainer" instance=ExtResource( 6 )]
margin_top = 188.0
margin_right = 631.0
margin_bottom = 266.0
theme = ExtResource( 8 )
text = "CHALLENGE SELECTION"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Donate" to="." method="_on_Donate_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/UtoShop" to="." method="_on_UtoShop_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Website" to="." method="_on_Website_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ChallengeSelection" to="." method="_on_ChallengeSelection_pressed"]
